--- a/updatecli/updatecli.d/terraform-providers.yaml
+++ b/updatecli/updatecli.d/terraform-providers.yaml
@@ -1,4 +1,4 @@
-title: "Bump Terraform plugins - not modules"
+name: "Bump Terraform providers - not modules"
 
 scms:
   default:
@@ -22,17 +22,16 @@ targets:
   upgradeActualLockFile:
     name: "Update the content of the Terraform lock file to upgrade terraform providers"
     kind: file
-    sourceId: getLatestLockFileContent
+    sourceid: getLatestLockFileContent
     spec:
       file: ".terraform.lock.hcl"
-    scmID: default
+    scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
-    scmID: default
-    targets:
-      - upgradeActualLockFile
+    kind: github/pullrequest
+    scmid: default
     spec:
       labels:
         - dependencies
+        - terraform-providers
